--- a/.github/workflows/deploy-cloudflare-worker.yaml
+++ b/.github/workflows/deploy-cloudflare-worker.yaml
@@ -5,7 +5,7 @@ on:
       branches:
         - main
       paths:
-        - cloudflare-fake-secured-api/**
+        - cloudflare-worker/**
         
     workflow_dispatch:
 
@@ -31,7 +31,7 @@ jobs:
 
         - name: Install dependencies
           run: |
-            cd cloudflare-fake-secured-api
+            cd cloudflare-worker
             npm ci
         
         - name: Create .env file
@@ -48,7 +48,7 @@ jobs:
 
         - name: Replace "// vars.*" in wrangler.jsonc with a json string
           run: |
-            cd cloudflare-fake-secured-api
+            cd cloudflare-worker
             cp wrangler.jsonc wrangler.jsonc.bak
             set -a && source .env && set +a 
             cat .env
@@ -60,7 +60,7 @@ jobs:
           with:
             apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
             accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-            workingDirectory: cloudflare-fake-secured-api
+            workingDirectory: cloudflare-worker
             vars: |
                 AUTH0_DOMAIN
                 AUTH0_CLIENT_ID
