--- a/cloudflare-worker/wrangler.jsonc
+++ b/cloudflare-worker/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "cloudflare-fake-secured-api",
+	"name": "feedback-flow-api",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-03-19",
 	"observability": {
