--- a/.github/workflows/deploy-cloudflare-worker.yaml
+++ b/.github/workflows/deploy-cloudflare-worker.yaml
@@ -36,15 +36,15 @@ jobs:
         
         - name: Create .env file
           run: |
-            echo -n ${{ secrets.AUTH0_AUDIENCE }} | sed -n 's/http.:\/\/\(.*\)/DOMAIN_NAME=\1\n/p' > cloudflare-fake-secured-api/.env
+            echo -n ${{ secrets.AUTH0_AUDIENCE }} | sed -n 's/http.:\/\/\(.*\)/DOMAIN_NAME=\1\n/p' > cloudflare-worker/.env
 
-            echo "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" >> cloudflare-fake-secured-api/.env
-            echo "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" >> cloudflare-fake-secured-api/.env
-            echo "AUTH0_SCOPE=\"${{ secrets.AUTH0_SCOPE }}\"" >> cloudflare-fake-secured-api/.env
-            echo "AUTH0_AUDIENCE=${{ secrets.AUTH0_AUDIENCE }}" >> cloudflare-fake-secured-api/.env
-            echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" >> cloudflare-fake-secured-api/.env
-            echo "CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}" >> cloudflare-fake-secured-api/.env
-            echo "READ_PERMISSION=${{ secrets.READ_PERMISSION }}" >> cloudflare-fake-secured-api/.env
+            echo "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" >> cloudflare-worker/.env
+            echo "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" >> cloudflare-worker/.env
+            echo "AUTH0_SCOPE=\"${{ secrets.AUTH0_SCOPE }}\"" >> cloudflare-worker/.env
+            echo "AUTH0_AUDIENCE=${{ secrets.AUTH0_AUDIENCE }}" >> cloudflare-worker/.env
+            echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" >> cloudflare-worker/.env
+            echo "CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}" >> cloudflare-worker/.env
+            echo "READ_PERMISSION=${{ secrets.READ_PERMISSION }}" >> cloudflare-worker/.env
 
         - name: Replace "// vars.*" in wrangler.jsonc with a json string
           run: |
