--- a/.github/workflows/deploy-cloudflare-worker.yaml
+++ b/.github/workflows/deploy-cloudflare-worker.yaml
@@ -45,6 +45,8 @@ jobs:
             echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" >> cloudflare-worker/.env
             echo "CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}" >> cloudflare-worker/.env
             echo "READ_PERMISSION=${{ secrets.READ_PERMISSION }}" >> cloudflare-worker/.env
+            echo "WRITE_PERMISSION=${{ secrets.WRITE_PERMISSION }}" >> cloudflare-worker/.env
+            echo "ADMIN_PERMISSION=${{ secrets.ADMIN_PERMISSION }}" >> cloudflare-worker/.env
 
         - name: Replace "// vars.*" in wrangler.jsonc with a json string
           run: |
@@ -52,7 +54,7 @@ jobs:
             cp wrangler.jsonc wrangler.jsonc.bak
             set -a && source .env && set +a 
             cat .env
-            cat wrangler.jsonc.bak | sed 's|// "vars".*.|,"vars": { "AUTH0_DOMAIN": "'"${AUTH0_DOMAIN}"'", "AUTH0_CLIENT_ID": "'"${AUTH0_CLIENT_ID}"'", "AUTH0_SCOPE": "'"${AUTH0_SCOPE}"'", "AUTH0_AUDIENCE": "'"${AUTH0_AUDIENCE}"'", "API_BASE_URL": "'"${API_BASE_URL}"'", "CORS_ORIGIN": "'"${CORS_ORIGIN}"'", "READ_PERMISSION": "'"${READ_PERMISSION}"'" }|' > wrangler.jsonc.2
+            cat wrangler.jsonc.bak | sed 's|// "vars".*.|,"vars": { "AUTH0_DOMAIN": "'"${AUTH0_DOMAIN}"'", "AUTH0_CLIENT_ID": "'"${AUTH0_CLIENT_ID}"'", "AUTH0_SCOPE": "'"${AUTH0_SCOPE}"'", "AUTH0_AUDIENCE": "'"${AUTH0_AUDIENCE}"'", "API_BASE_URL": "'"${API_BASE_URL}"'", "CORS_ORIGIN": "'"${CORS_ORIGIN}"'", "READ_PERMISSION": "'"${READ_PERMISSION}"'", "WRITE_PERMISSION": "'"${WRITE_PERMISSION}"'", "ADMIN_PERMISSION": "'"${ADMIN_PERMISSION}"'" }|' > wrangler.jsonc.2
             cat wrangler.jsonc.2 | sed 's|// "routes".*.|,"routes": [{ "pattern": "'"${DOMAIN_NAME}"'", "custom_domain": true }]|'  > wrangler.jsonc
             cat wrangler.jsonc
         - name: Deploy
@@ -69,6 +71,8 @@ jobs:
                 API_BASE_URL
                 CORS_ORIGIN
                 READ_PERMISSION
+                WRITE_PERMISSION
+                ADMIN_PERMISSION
           env:
             AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
             AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
@@ -77,3 +81,5 @@ jobs:
             API_BASE_URL: ${{ secrets.API_BASE_URL }}
             CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
             READ_PERMISSION: ${{ secrets.READ_PERMISSION }}
+            WRITE_PERMISSION: ${{ secrets.WRITE_PERMISSION }}
+            ADMIN_PERMISSION: ${{ secrets.ADMIN_PERMISSION }}
