--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.5.0",
     "i18next": "^24.2.3",
     "i18next-http-backend": "^3.0.2",
+    "jose": "^6.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
