feat: Integrate pagination and table display for testers in AddNewUser component

--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,12 @@
     "@heroui/kbd": "^2.2.13-beta.1",
     "@heroui/link": "^2.2.14-beta.1",
     "@heroui/navbar": "^2.2.15-beta.2",
+    "@heroui/pagination": "^2.2.15-beta.1",
     "@heroui/shared-utils": "^2.1.8-beta.1",
     "@heroui/snippet": "^2.2.18-beta.2",
     "@heroui/switch": "^2.2.15-beta.1",
     "@heroui/system": "^2.4.13-beta.2",
+    "@heroui/table": "^2.2.16-beta.2",
     "@heroui/theme": "^2.4.13-beta.2",
     "@heroui/tooltip": "^2.2.14-beta.2",
     "@react-aria/visually-hidden": "3.8.21",
