--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -11,7 +11,7 @@
 		"start": "wrangler dev",
 		"test": "vitest",
 		"test:debug": "vitest --inspect-brk --no-file-parallelism",
-		"test:api": "node --experimental-vm-modules ./node_modules/.bin/jest",
+		"test:api": "set -a && source ../.env && set +a && node --experimental-vm-modules ./node_modules/.bin/jest",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
