--- a/cloudflare-worker/wrangler.jsonc
+++ b/cloudflare-worker/wrangler.jsonc
@@ -15,26 +15,33 @@
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
 	 */
 	// "placement": { "mode": "smart" },
-
 	/**
 	 * Bindings
 	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
-	 "unsafe":{
+	"unsafe": {
 		"bindings": [
 			{
-			"name": "RATE_LIMITER",
-			"type": "ratelimit",
-			"namespace_id": "1001",
-			"simple": {
+				"name": "RATE_LIMITER",
+				"type": "ratelimit",
+				"namespace_id": "1001",
+				"simple": {
 					"limit": 10,
 					"period": 60
 				}
 			},
-	 	 ],
-	}
+		],
+	},
+	"d1_databases": [
+    {
+      "binding": "FeedbackFlowDB",
+      "database_name": "feedbackflow-db",
+      "database_id": "de52ab35-cd4d-4b2b-866a-f6cb372fc1fa"
+    }
+  ]
+	// ],
 	/**
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
@@ -44,18 +51,15 @@
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
 	 */
-
 	/**
 	 * Static Assets
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
 	// "assets": { "directory": "./public/", "binding": "ASSETS" },
-
 	/**
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
-
 	// "routes": [{"pattern": "shop.example.com","custom_domain": true}]
 }
