--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -44,13 +44,13 @@ jobs:
           cd client
           export AUTH0_DOMAIN="${{ secrets.AUTH0_DOMAIN }}"
           export AUTH0_CLIENT_ID="${{ secrets.AUTH0_CLIENT_ID }}"
-          export AUTH0_SCOPE="${{ secrets.AUTH0_SCOPE }}"
+          export AUTH0_SCOPE="${{ vars.AUTH0_SCOPE }}"
           export AUTH0_AUDIENCE="${{ secrets.AUTH0_AUDIENCE }}"
           export API_BASE_URL="${{ secrets.API_BASE_URL }}"
           export CORS_ORIGIN="${{ secrets.CORS_ORIGIN }}"
-          export READ_PERMISSION="${{ secrets.READ_PERMISSION }}"
-          export WRITE_PERMISSION="${{ secrets.WRITE_PERMISSION }}"
-          export ADMIN_PERMISSION="${{ secrets.ADMIN_PERMISSION }}"
+          export READ_PERMISSION="${{ vars.READ_PERMISSION }}"
+          export WRITE_PERMISSION="${{ vars.WRITE_PERMISSION }}"
+          export ADMIN_PERMISSION="${{ vars.ADMIN_PERMISSION }}"
           npx vite build --base=/${{ github.event.repository.name }}
 
       - name: Upload pages artifact
