--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -10,30 +10,31 @@
 		"lint": "eslint --fix",
 		"start": "wrangler dev",
 		"test": "set -a && source ../.env && set +a && node --experimental-vm-modules ./node_modules/.bin/jest",
+		"d1:init": "npx wrangler d1 execute --local --file src/test/seed-test-data.sql feedbackflow-db",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.8.4",
+		"@cloudflare/vitest-pool-workers": "^0.8.5",
 		"@cloudflare/workers-types": "^4.20250321.0",
 		"@jest/globals": "^29.7.0",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.13",
-		"@typescript-eslint/eslint-plugin": "^8.27.0",
-		"@typescript-eslint/parser": "^8.27.0",
+		"@typescript-eslint/eslint-plugin": "^8.28.0",
+		"@typescript-eslint/parser": "^8.28.0",
 		"axios": "^1.8.4",
 		"dotenv": "^16.4.7",
 		"eslint": "^9.23.0",
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^5.2.4",
+		"eslint-plugin-prettier": "^5.2.5",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.3.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.2",
 		"vitest": "~3.0.9",
-		"wrangler": "^4.4.0"
+		"wrangler": "^4.4.1"
 	},
 	"dependencies": {
 		"jose": "^6.0.10",
