--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -32,6 +32,7 @@
 		"eslint-plugin-prettier": "^5.2.5",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"jest": "^29.7.0",
+		"jiti": "^2.4.2",
 		"ts-jest": "^29.3.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.2",
