--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@auth0/auth0-react": "^2.3.0",
     "@heroui/button": "^2.2.17-beta.2",
     "@heroui/code": "^2.2.13-beta.1",
+    "@heroui/date-picker": "^2.3.17-beta.2",
     "@heroui/dropdown": "^2.3.17-beta.2",
     "@heroui/input": "^2.4.17-beta.2",
     "@heroui/kbd": "^2.2.13-beta.1",
