--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@heroui/link": "^2.2.14-beta.1",
     "@heroui/modal": "^2.2.14-beta.2",
     "@heroui/navbar": "^2.2.15-beta.2",
+    "@heroui/number-input": "^2.0.7-beta.2",
     "@heroui/pagination": "^2.2.15-beta.1",
     "@heroui/shared-utils": "^2.1.8-beta.1",
     "@heroui/snippet": "^2.2.18-beta.2",
@@ -31,6 +32,7 @@
     "@heroui/system": "^2.4.13-beta.2",
     "@heroui/table": "^2.2.16-beta.2",
     "@heroui/theme": "^2.4.13-beta.2",
+    "@heroui/toast": "^2.0.7-beta.2",
     "@heroui/tooltip": "^2.2.14-beta.2",
     "@react-aria/visually-hidden": "3.8.21",
     "@react-types/shared": "^3.28.0",
