--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd client
-          npm ci
+          npm ci --legacy-peer-deps
 
       - name: Build project
         # You can change the base path to your repository name
