--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
+    "@sctg/vite-plugin-github-pages-spa": "^0.1.1",
     "@tailwindcss/vite": "^4.1.5",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
