--- a/client/package.json
+++ b/client/package.json
@@ -11,31 +11,32 @@
     "lint": "eslint ./src/**/**/*.{ts,tsx} --fix",
     "wrangler": "cd cloudflare-fake-secured-api && npm run dev:env",
     "preview": "vite preview",
+    "update:heroui:cli": "npx heroui-cli@latest upgrade --all --beta",
     "update:heroui": "node --no-warnings --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));' ./update-heroui.ts",
     "openapi": "node --experimental-strip-types get-openapi.ts"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
-    "@heroui/button": "^2.2.18-beta.2",
-    "@heroui/code": "^2.2.14-beta.2",
-    "@heroui/date-picker": "^2.3.18-beta.2",
-    "@heroui/dropdown": "^2.3.18-beta.2",
-    "@heroui/image": "^2.2.12-beta.2",
-    "@heroui/input": "^2.4.18-beta.2",
-    "@heroui/kbd": "^2.2.14-beta.2",
-    "@heroui/link": "^2.2.15-beta.2",
-    "@heroui/modal": "^2.2.15-beta.2",
-    "@heroui/navbar": "^2.2.16-beta.2",
-    "@heroui/number-input": "^2.0.8-beta.2",
-    "@heroui/pagination": "^2.2.16-beta.2",
+    "@heroui/button": "^2.2.20-beta.1",
+    "@heroui/code": "^2.2.15-beta.1",
+    "@heroui/date-picker": "^2.3.20-beta.1",
+    "@heroui/dropdown": "^2.3.20-beta.1",
+    "@heroui/image": "^2.2.13-beta.1",
+    "@heroui/input": "^2.4.20-beta.1",
+    "@heroui/kbd": "^2.2.16-beta.1",
+    "@heroui/link": "^2.2.17-beta.1",
+    "@heroui/modal": "^2.2.17-beta.1",
+    "@heroui/navbar": "^2.2.18-beta.1",
+    "@heroui/number-input": "^2.0.10-beta.1",
+    "@heroui/pagination": "^2.2.18-beta.1",
     "@heroui/shared-utils": "^2.1.9-beta.2",
-    "@heroui/snippet": "^2.2.19-beta.2",
-    "@heroui/switch": "^2.2.16-beta.2",
-    "@heroui/system": "^2.4.14-beta.2",
-    "@heroui/table": "^2.2.17-beta.2",
-    "@heroui/theme": "^2.4.14-beta.2",
-    "@heroui/toast": "^2.0.8-beta.2",
-    "@heroui/tooltip": "^2.2.15-beta.2",
+    "@heroui/snippet": "^2.2.21-beta.1",
+    "@heroui/switch": "^2.2.18-beta.1",
+    "@heroui/system": "^2.4.16-beta.1",
+    "@heroui/table": "^2.2.19-beta.1",
+    "@heroui/theme": "^2.4.16-beta.1",
+    "@heroui/toast": "^2.0.10-beta.1",
+    "@heroui/tooltip": "^2.2.17-beta.1",
     "@react-aria/visually-hidden": "3.8.22",
     "@react-pdf/renderer": "^4.3.0",
     "@react-types/shared": "^3.29.0",
