--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@heroui/button": "^2.2.20-beta.1",
+    "@heroui/card": "^2.2.19-beta.1",
     "@heroui/code": "^2.2.15-beta.1",
     "@heroui/date-picker": "^2.3.20-beta.1",
     "@heroui/dropdown": "^2.3.20-beta.1",
@@ -41,11 +42,13 @@
     "@react-pdf/renderer": "^4.3.0",
     "@react-types/shared": "^3.29.0",
     "@tailwindcss/postcss": "^4.1.5",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.9.4",
     "i18next": "^25.0.2",
     "i18next-http-backend": "^3.0.2",
     "jose": "^6.0.10",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.3",
