--- a/client/package.json
+++ b/client/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^16.1.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "swagger-jsdoc": "^7.0.0-rc.6",
