--- a/client/package.json
+++ b/client/package.json
@@ -17,72 +17,72 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
-    "@heroui/button": "^2.2.23-beta.2",
-    "@heroui/card": "^2.2.22-beta.2",
-    "@heroui/code": "^2.2.17-beta.5",
-    "@heroui/date-picker": "^2.3.23-beta.4",
-    "@heroui/dropdown": "^2.3.23-beta.2",
-    "@heroui/image": "^2.2.15-beta.3",
-    "@heroui/input": "^2.4.23-beta.4",
-    "@heroui/kbd": "^2.2.18-beta.5",
-    "@heroui/link": "^2.2.20-beta.3",
-    "@heroui/modal": "^2.2.20-beta.3",
-    "@heroui/navbar": "^2.2.21-beta.2",
-    "@heroui/number-input": "^2.0.13-beta.4",
-    "@heroui/pagination": "^2.2.21-beta.3",
-    "@heroui/shared-utils": "^2.1.10-beta.7",
-    "@heroui/snippet": "^2.2.24-beta.3",
-    "@heroui/switch": "^2.2.21-beta.2",
-    "@heroui/system": "^2.4.19-beta.2",
-    "@heroui/table": "^2.2.22-beta.4",
-    "@heroui/theme": "^2.4.18-beta.7",
-    "@heroui/toast": "^2.0.13-beta.3",
-    "@heroui/tooltip": "^2.2.20-beta.2",
-    "@react-aria/visually-hidden": "3.8.26",
+    "@heroui/button": "^2.2.25",
+    "@heroui/card": "^2.2.24",
+    "@heroui/code": "^2.2.19",
+    "@heroui/date-picker": "^2.3.26",
+    "@heroui/dropdown": "^2.3.25",
+    "@heroui/image": "^2.2.16",
+    "@heroui/input": "^2.4.26",
+    "@heroui/kbd": "^2.2.20",
+    "@heroui/link": "^2.2.22",
+    "@heroui/modal": "^2.2.22",
+    "@heroui/navbar": "^2.2.23",
+    "@heroui/number-input": "^2.0.16",
+    "@heroui/pagination": "^2.2.23",
+    "@heroui/shared-utils": "^2.1.11",
+    "@heroui/snippet": "^2.2.26",
+    "@heroui/switch": "^2.2.23",
+    "@heroui/system": "^2.4.21",
+    "@heroui/table": "^2.2.25",
+    "@heroui/theme": "^2.4.21",
+    "@heroui/toast": "^2.0.15",
+    "@heroui/tooltip": "^2.2.22",
+    "@react-aria/visually-hidden": "3.8.27",
     "@react-pdf/renderer": "^4.3.0",
-    "@react-types/shared": "^3.31.0",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@react-types/shared": "^3.32.0",
+    "@tailwindcss/postcss": "^4.1.13",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
-    "i18next": "^25.3.2",
+    "i18next": "^25.5.2",
     "i18next-http-backend": "^3.0.2",
-    "jose": "^6.0.12",
+    "jose": "^6.1.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-i18next": "^15.6.1",
-    "react-router-dom": "^7.7.1",
-    "swagger-ui-react": "^5.27.1",
-    "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^4.1.11"
+    "react-i18next": "^15.7.3",
+    "react-router-dom": "^7.8.2",
+    "swagger-ui-react": "^5.28.1",
+    "tailwind-variants": "^3.1.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@sctg/vite-plugin-github-pages-spa": "^0.1.1",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/swagger-ui-react": "^5.18.0",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.32.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "swagger-jsdoc": "^7.0.0-rc.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "vite": "^7.0.6",
+    "vite": "^7.1.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
