feat: add Paypal transaction link

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -54,6 +54,7 @@ jobs:
           export BACKUP_PERMISSION="${{ vars.BACKUP_PERMISSION }}"
           export DB_MAX_IMAGE_SIZE="${{ vars.DB_MAX_IMAGE_SIZE }}"
           export AMAZON_BASE_URL="${{ vars.AMAZON_BASE_URL }}"
+          export PAYPAL_TRANSACTION_BASE_URL="${{ secrets.PAYPAL_TRANSACTION_BASE_URL }}"
           npx vite build --base=/${{ github.event.repository.name }}
 
       - name: Upload pages artifact
