--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -53,6 +53,7 @@ jobs:
           export ADMIN_PERMISSION="${{ vars.ADMIN_PERMISSION }}"
           export BACKUP_PERMISSION="${{ vars.BACKUP_PERMISSION }}"
           export DB_MAX_IMAGE_SIZE="${{ vars.DB_MAX_IMAGE_SIZE }}"
+          export SEARCH_PERMISSION="${{ vars.SEARCH_PERMISSION }}"
           export AMAZON_BASE_URL="${{ vars.AMAZON_BASE_URL }}"
           export PAYPAL_TRANSACTION_BASE_URL="${{ secrets.PAYPAL_TRANSACTION_BASE_URL }}"
           npx vite build --base=/${{ github.event.repository.name }}
