--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ bun.lockb.env
 .env
 _sensitive_datas/_sensitive_datas.tar.xz
 .env.bak
+achats.csv
+verify_purchases.py
+insert_missing_purchases.sql
