feat: add links api

--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -13,6 +13,14 @@
 		"start": "wrangler dev",
 		"test": "set -a && source ../.env && set +a && node --experimental-vm-modules ./node_modules/.bin/jest",
 		"d1:create": "npx wrangler d1 execute --local --file src/db/create.sql feedbackflow-db",
+		"d1:migrate:v0-v1": "npx wrangler d1 execute --local --file src/db/migrations/v1_add_transaction_id.sql feedbackflow-db",
+		"d1:migrate:v1-v2": "npx wrangler d1 execute --local --file src/db/migrations/v2_add_screenshot_summary.sql feedbackflow-db",
+		"d1:migrate:v2-v3": "npx wrangler d1 execute --local --file src/db/migrations/v3_add_links_table.sql feedbackflow-db",
+		"d1:migrate:all": "npm run d1:migrate:v0-v1 && npm run d1:migrate:v1-v2 && npm run d1:migrate:v2-v3",
+		"d1:migrate:v0-v1:remote": "npx wrangler d1 execute --remote --file src/db/migrations/v1_add_transaction_id.sql feedbackflow-db",
+		"d1:migrate:v1-v2:remote": "npx wrangler d1 execute --remote --file src/db/migrations/v2_add_screenshot_summary.sql feedbackflow-db",
+		"d1:migrate:v2-v3:remote": "npx wrangler d1 execute --remote --file src/db/migrations/v3_add_links_table.sql feedbackflow-db",
+		"d1:migrate:all:remote": "npm run d1:migrate:v0-v1:remote && npm run d1:migrate:v1-v2:remote && npm run d1:migrate:v2-v3:remote",
 		"d1:create:remote": "npx wrangler d1 execute --remote --file src/db/create.sql feedbackflow-db",
 		"d1:init": "npx wrangler d1 execute --local --file src/test/seed-test-data.sql feedbackflow-db",
 		"cf-typegen": "wrangler types"
