feat: Add Generate Public Link functionality and update routing
- Added a new modal component for generating public links with duration options.
- Integrated the GeneratePublicLinkModal into the IndexPage for user interaction.
- Created a new LinkPage to display details of the generated public link.
- Updated routing to replace the PricingPage with the new LinkPage.
- Added translations for new strings related to public link generation in multiple languages.
- Removed the PricingPage as it is no longer needed.
- Introduced a new MiniLayout for simplified page structure.

--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@heroui/navbar": "^2.2.25",
     "@heroui/number-input": "^2.0.18",
     "@heroui/pagination": "^2.2.24",
+    "@heroui/select": "^2.4.28",
     "@heroui/shared-utils": "^2.1.12",
     "@heroui/snippet": "^2.2.28",
     "@heroui/switch": "^2.2.24",
