--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - client/**
+      - .github/workflows/pages.yaml
       
 #   release:
 #     types: [published]
