--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@heroui/snippet": "^2.2.28",
     "@heroui/switch": "^2.2.24",
     "@heroui/system": "^2.4.23",
+    "@heroui/checkbox": "^2.2.24",
     "@heroui/table": "^2.2.27",
     "@heroui/theme": "^2.4.23",
     "@heroui/toast": "^2.0.17",
