--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "build": "npm run openapi && tsc && vite build",
     "build:env": "set -a && source ../.env && set +a && npm run openapi &&  vite build",
     "lint": "eslint ./src/**/**/*.{ts,tsx} --fix",
-    "wrangler": "cd cloudflare-fake-secured-api && npm run dev:env",
+    "wrangler": "cd cloudflare-worker && npm run dev:env",
     "preview": "vite preview",
     "update:heroui:cli": "npx heroui-cli@latest upgrade --all --beta",
     "update:heroui": "node --no-warnings --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));' ./update-heroui.ts",
