--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -5,13 +5,13 @@ on:
     branches:
       - main
     paths:
-      - client/**
+      - apps/client/**
       - .github/workflows/pages.yaml
-      
-#   release:
-#     types: [published]
-#   schedule:
-#     - cron: '0 0 * * 0' # every Sunday at midnight
+
+  #   release:
+  #     types: [published]
+  #   schedule:
+  #     - cron: '0 0 * * 0' # every Sunday at midnight
   workflow_dispatch:
 
 permissions:
@@ -32,22 +32,23 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: "24"
 
       - name: Install dependencies
         run: |
-          cd client
-          npm ci --legacy-peer-deps
+          corepack enable
+          yarn install --immutable
+          cd apps/client
 
       - name: Create openapi.json file
         run: |
-          cd client
-          npm run openapi
+          cd apps/client
+          yarn openapi
 
       - name: Build project
         # You can change the base path to your repository name
         run: |
-          cd client
+          cd apps/client
           export AUTH0_DOMAIN="${{ secrets.AUTH0_DOMAIN }}"
           export AUTH0_CLIENT_ID="${{ secrets.AUTH0_CLIENT_ID }}"
           export AUTH0_SCOPE="${{ vars.AUTH0_SCOPE }}"
@@ -68,7 +69,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload docs directory
-          path: "client/dist"
+          path: "apps/client/dist"
 
   deploy:
     environment:
