--- a/apps/cloudflare-worker/package.json
+++ b/apps/cloudflare-worker/package.json
@@ -3,15 +3,19 @@
 	"version": "0.0.0",
 	"private": true,
 	"type": "module",
+	"name": "cloudflare-worker",
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
-		"dev:env": "cp ../.env .dev.vars && wrangler dev",
-		"dev:env:d1": "sed -i .bak -e 's/^DB_BACKEND=.*$/DB_BACKEND=d1/' ../.env && cp ../.env .dev.vars && wrangler dev",
-		"dev:env:memory": "sed -i .bak -e 's/^DB_BACKEND=.*$/DB_BACKEND=memory/' ../.env && cp ../.env .dev.vars && wrangler dev",
-		"lint": "eslint --fix",
+		"dev:env": "bash -c 'cp ../../.env .dev.vars && wrangler dev'",
+		"preview:env": "bash -c 'cp ../../.env .dev.vars && wrangler dev --port 8787'",
 		"start": "wrangler dev",
-		"test": "set -a && source ../.env && set +a && node --experimental-vm-modules ./node_modules/.bin/jest",
+		"build": "echo 'Cloudflare Worker does not require build step'",
+		"test": "vitest",
+		"type-check": "tsc --noEmit",
+		"lint": "eslint ./src/**/*.{ts,tsx} --fix",
+		"clean": "rm -rf .wrangler .dev.vars .turbo",
+		"cf-typegen": "wrangler types",
 		"d1:create": "npx wrangler d1 execute --local --file src/db/create.sql feedbackflow-db",
 		"d1:migrate:v0-v1": "npx wrangler d1 execute --local --file src/db/migrations/v1_add_transaction_id.sql feedbackflow-db",
 		"d1:migrate:v1-v2": "npx wrangler d1 execute --local --file src/db/migrations/v2_add_screenshot_summary.sql feedbackflow-db",
@@ -22,8 +26,7 @@
 		"d1:migrate:v2-v3:remote": "npx wrangler d1 execute --remote --file src/db/migrations/v3_add_links_table.sql feedbackflow-db",
 		"d1:migrate:all:remote": "npm run d1:migrate:v0-v1:remote && npm run d1:migrate:v1-v2:remote && npm run d1:migrate:v2-v3:remote",
 		"d1:create:remote": "npx wrangler d1 execute --remote --file src/db/create.sql feedbackflow-db",
-		"d1:init": "npx wrangler d1 execute --local --file src/test/seed-test-data.sql feedbackflow-db",
-		"cf-typegen": "wrangler types"
+		"d1:init": "npx wrangler d1 execute --local --file src/test/seed-test-data.sql feedbackflow-db"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.12.8",
