--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,14 @@ dist-ssr
 *.sln
 *.sw?
 
+# Yarn 2+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 pnpm-lock.yaml
 yarn.lock
