--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,17 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "name": "client",
   "scripts": {
     "dev": "vite",
-    "dev:env": "set -a && source ../.env && set +a && vite",
-    "build": "npm run openapi && tsc && vite build",
-    "build:env": "set -a && source ../.env && set +a && npm run openapi &&  vite build",
+    "dev:env": "bash -c 'set -a && source ../../.env && set +a && vite'",
+    "build": "yarn clean && tsc && vite build",
+    "build:env": "bash -c 'yarn clean && set -a && source ../../.env && set +a && tsc && vite build'",
     "lint": "eslint ./src/**/**/*.{ts,tsx} --fix",
-    "wrangler": "cd cloudflare-worker && npm run dev:env",
-    "preview": "vite preview",
-    "update:heroui:cli": "npx heroui-cli@latest upgrade --all --beta",
-    "update:heroui": "node --no-warnings --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));' ./update-heroui.ts",
-    "openapi": "node --experimental-strip-types get-openapi.ts"
+    "type-check": "tsc --noEmit",
+    "preview:env": "bash ./scripts/preview-ensure.sh",
+    "clean": "rm -rf dist .turbo node_modules/.vite node_modules/.cache",
+    "update:heroui:cli": "npx heroui-cli@latest upgrade --all",
+    "update:heroui": "node --no-warnings --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));' ./update-heroui.ts"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.12.0",
@@ -61,7 +62,7 @@
   "devDependencies": {
     "@sctg/vite-plugin-github-pages-spa": "^0.1.1",
     "@tailwindcss/vite": "^4.1.18",
-    "@types/node": "^24.10.9",
+    "@types/node": "^24.10.11",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@types/swagger-ui-react": "^5.18.0",
