--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -35,10 +35,23 @@ jobs:
           node-version: "24"
 
       - name: Install dependencies
+        if: false # Temporarily disabled to work around bug
         run: |
           corepack enable
           yarn install --immutable
+
+      - name: Temporary workaround for bug https://github.com/yarnpkg/berry/issues/7047
+        if: true # Temporarily enabled to work around bug
+        run: |
+          mv package.json package.json.bak
+          mv yarn.lock yarn.lock.bak
           cd apps/client
+          npm install
+          cd ../../apps/cloudflare-worker
+          npm install
+          cd ../../
+          mv package.json.bak package.json
+          mv yarn.lock.bak yarn.lock
 
       - name: Create openapi.json file
         run: |
