--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,26 +1,9 @@
-# Copyright (c) 2024-2026 Ronan LE MEILLAT
-# License: AGPL-3.0-or-later
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as
-# published by the Free Software Foundation, either version 3 of the
-# License, or (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program. If not, see <http://www.gnu.org/licenses/>.
-#
 compressionLevel: mixed
 
 enableGlobalCache: false
 
-enableTelemetry: false
+enableTelemetry: true
 
 nodeLinker: node-modules
 
-# Keep the yarnPath value from the template; corepack can also install yarn if absent
-yarnPath: .yarn/releases/yarn-4.9.2.cjs
+yarnPath: .yarn/releases/yarn-4.10.0.cjs
